--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 authors = ["Dan Rammer <hamersaw@bushpath.com>"]
 
 [dependencies]
+bson = "0.3"
 docopt = "0.6"
+mongodb = "0.1"
+rand = "0.3"
 rustc-serialize = "0.3"
+time = "0.1"
