--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Dan Rammer <hamersaw@bushpath.com>"]
 [dependencies]
 bson = "0.3"
 bzip2 = "0.3"
-docopt = "0.6"
+clap = "2.19"
 mongodb = "0.1"
 rand = "0.3"
 rustc-serialize = "0.3"
