--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ bson = "0.3"
 bzip2 = "0.3"
 capnp = "0.7"
 capnp-rpc = "0.7"
-clap = "2.19"
+clap = {version = "2.19", features = ["yaml"]}
 gj = "0.2"
 gjio = "0.1"
 mongodb = "0.1"
