--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ capnpc = "0.7"
 [dependencies]
 bson = "0.3"
 bzip2 = "0.3"
-capnp = "0.7"
-capnp-rpc = "0.7"
+capnp = "0.8"
+capnp-rpc = "0.8"
 clap = {version = "2.19", features = ["yaml"]}
+futures = "0.1"
 gj = "0.2"
 gjio = "0.1"
 mongodb = "0.1"
@@ -20,3 +21,4 @@ rand = "0.3"
 rustc-serialize = "0.3"
 threadpool = "1.3"
 time = "0.1"
+tokio-core = "0.1"
