--- a/src/bin/proddle_args.yaml
+++ b/src/bin/proddle_args.yaml
@@ -1,6 +1,6 @@
 name: server
 version: "1.0"
-author: Daniel Rammer <hamesaw@bushpath.com>
+author: Daniel Rammer <hamersaw@bushpath.com>
 about: Server deployment for the distributed probing application Proddle.
 args:
     - MONGODB_IP_ADDRESS:
