--- a/src/bin/vantage_args.yaml
+++ b/src/bin/vantage_args.yaml
@@ -25,10 +25,10 @@ args:
         short: b
         long: bucket_count
         takes_value: true
-        default_value: "10"
+        default_value: "50"
         help: Number of hash buckets for operations.
     - THREAD_COUNT:
-        short: t
+        short: T
         long: thread_count
         takes_value: true
         default_value: "16"
@@ -57,3 +57,15 @@ args:
         takes_value: true
         default_value: "100"
         help: Size of batch for sending results to server.
+    - INCLUDE_TAGS:
+        short: t
+        long: tag
+        takes_value: true
+        multiple: true
+        help: Include operation if tag is present.
+    - EXCLUDE_TAGS:
+        short: x
+        long: exclude_tag
+        takes_value: true
+        multiple: true
+        help: Exclude operation if tag is present.
