--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,12 @@ bzip2 = "0.3"
 capnp = "0.8"
 capnp-rpc = "0.8"
 clap = {version = "2.19", features = ["yaml"]}
+env_logger = "0.3"
 futures = "0.1"
 gj = "0.2"
 gjio = "0.1"
 mongodb = "0.1"
+log = "0.3"
 rand = "0.3"
 rustc-serialize = "0.3"
 threadpool = "1.3"
