--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ bson = "0.3"
 bzip2 = "0.3"
 capnp = "0.8"
 capnp-rpc = "0.8"
+chan = "0.1"
 clap = {version = "2.19", features = ["yaml"]}
 env_logger = "0.3"
 futures = "0.1"
