--- a/bridge/Cargo.toml
+++ b/bridge/Cargo.toml
@@ -1,15 +1,17 @@
 [package]
-name = "proddle"
+name = "bridge"
 version = "0.1.0"
 authors = ["Dan Rammer <hamersaw@bushpath.com>"]
-build = "build.rs"
-
-[build-dependencies]
-capnpc = "0.7"
 
 [dependencies]
 bson = "0.3"
 capnp = "0.8"
 capnp-rpc = "0.8"
+clap = {version = "2.19", features = ["yaml"]}
+env_logger = "0.3"
 futures = "0.1"
+log = "0.3"
 mongodb = "0.1"
+proddle = {path = "../"}
+rustc-serialize = "0.3"
+tokio-core = "0.1"
