removed interval from operation. now vantages specify the interval using tags in the arguments.

--- a/vantage/src/args.yaml
+++ b/vantage/src/args.yaml
@@ -62,7 +62,7 @@ args:
         long: tag
         takes_value: true
         multiple: true
-        help: Include operation if tag is present.
+        help: Include operation with interval if tag is present (ex. -t core|14400).
     - EXCLUDE_TAGS:
         short: x
         long: exclude_tag
