--- a/bridge/src/args.yaml
+++ b/bridge/src/args.yaml
@@ -4,25 +4,25 @@ author: Daniel Rammer <hamersaw@bushpath.com>
 about: Server deployment for the distributed probing application Proddle.
 args:
     - BRIDGE_IP_ADDRESS:
-        short: I
+        short: i
         long: ip_address
         takes_value: true
         default_value: 0.0.0.0
         help: Ip address for proddle bridge.
     - BRIDGE_PORT:
-        short: P
+        short: b
         long: port
         takes_value: true
         default_value: "12289"
         help: Port for proddle bridge.
     - MONGODB_IP_ADDRESS:
-        short: i
+        short: I
         long: mongodb_ip_address
         takes_value: true
         default_value: 127.0.0.1
         help: Ip address for mongodb instance.
     - MONGODB_PORT:
-        short: p
+        short: P
         long: mongodb_port
         takes_value: true
         default_value: "27017"
@@ -40,5 +40,15 @@ args:
     - KEY_FILE:
         short: k
         long: key_file
-        takes_value: tru
+        takes_value: true
         help: Key file for ssl connection.
+    - USERNAME:
+        short: u
+        long: username
+        takes_value: true
+        help: Username for mongodb connection.
+    - PASSWORD:
+        short: p
+        long: password
+        takes_value: true
+        help: Password for mongodb connection.
