--- a/yogi/src/args.yaml
+++ b/yogi/src/args.yaml
@@ -3,13 +3,13 @@ version: "1.0"
 author: Daniel Rammer <hamersaw@bushpath.com>
 args:
     - MONGODB_IP_ADDRESS:
-        short: i
+        short: I
         long: mongodb_ip_address
         takes_value: true
         default_value: 127.0.0.1
         help: Ip address for mongodb instance.
     - MONGODB_PORT:
-        short: p
+        short: P
         long: mongodb_port
         takes_value: true
         default_value: "27017"
