--- a/bridge/Cargo.toml
+++ b/bridge/Cargo.toml
@@ -4,14 +4,14 @@ version = "0.1.0"
 authors = ["Dan Rammer <hamersaw@bushpath.com>"]
 
 [dependencies]
-bson = "0.3"
+bson = "0.4"
 capnp = "0.8"
 capnp-rpc = "0.8"
 clap = {version = "2.19", features = ["yaml"]}
 env_logger = "0.3"
 futures = "0.1"
 log = "0.3"
-mongodb = {version = "0.2.1", features = ["ssl"]}
+mongodb = {version = "0.2", features = ["ssl"]}
 proddle = {path = "../"}
-rustc-serialize = "0.3"
+serde_json = "0.9"
 tokio-core = "0.1"
