--- a/vantage/Cargo.toml
+++ b/vantage/Cargo.toml
@@ -4,14 +4,16 @@ version = "0.1.0"
 authors = ["Dan Rammer <hamersaw@bushpath.com>"]
 
 [dependencies]
-env_logger = "0.3"
+bson = "0.4"
 capnp = "0.8"
 capnp-rpc = "0.8"
 chan = "0.1"
 clap = {version = "2.19", features = ["yaml"]}
+env_logger = "0.3"
 futures = "0.1"
 log = "0.3"
 proddle = {path = "../"}
+serde_json = "0.9"
 threadpool = "1.3"
 time = "0.1"
 tokio-core = "0.1"
