--- a/vantage/Cargo.toml
+++ b/vantage/Cargo.toml
@@ -13,6 +13,7 @@ env_logger = "0.3"
 futures = "0.1"
 log = "0.3"
 proddle = {path = "../"}
+rand = "0.3"
 serde_json = "0.9"
 threadpool = "1.3"
 time = "0.1"
