--- a/vantage/Cargo.toml
+++ b/vantage/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vantage"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Dan Rammer <hamersaw@bushpath.com>"]
 
 [dependencies]
@@ -9,12 +9,13 @@ capnp = "0.8"
 capnp-rpc = "0.8"
 chan = "0.1"
 clap = {version = "2.19", features = ["yaml"]}
-env_logger = "0.3"
 futures = "0.1"
-log = "0.3"
 proddle = {path = "../"}
 rand = "0.3"
 serde_json = "0.9"
+slog = "1.5"
+slog-scope = "0.2"
+slog-term = "1.5"
 threadpool = "1.3"
 time = "0.1"
 tokio-core = "0.1"
