--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "proddle"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Dan Rammer <hamersaw@bushpath.com>"]
 build = "build.rs"
 
@@ -14,3 +14,5 @@ capnp-rpc = "0.8"
 clap = "2.19"
 futures = "0.1"
 mongodb = "0.2"
+serde = "0.9"
+serde_derive = "0.9"
