--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "proddle"
-version = "0.1.4"
+version = "0.1.5"
 authors = ["Dan Rammer <hamersaw@bushpath.com>"]
 build = "build.rs"
 
@@ -12,6 +12,7 @@ bson = "0.4"
 capnp = "0.8"
 capnp-rpc = "0.8"
 clap = "2.19"
+curl = "0.4"
 futures = "0.1"
 mongodb = "0.2"
 serde = "0.9"
