--- a/yogi/src/args.yaml
+++ b/yogi/src/args.yaml
@@ -43,57 +43,18 @@ args:
         takes_value: true
         help: Password for mongodb connection.
 subcommands:
-    - measurement:
-        about: Performs actions on measurements.
-        subcommands:
-            - add:
-                about: Add a measurement.
-                args:
-                    - FILE:
-                        required: true
-                        help: Filename of measurement.
-                    - MEASUREMENT_NAME:
-                        required: true
-                        help: Name of measurement.
-                    - PARAMETER:
-                        short: p
-                        long: parameter
-                        takes_value: true
-                        multiple: true
-                        help: Python script parameter, ex. param|help.
-                    - DEPENDENCY:
-                        short: d
-                        long: dependency
-                        takes_value: true
-                        multiple: true
-                        help: Python dependencies of the measurement.
-            - delete:
-                about: Delete a module.
-                args:
-                    - MEASUREMENT_NAME:
-                        required: true
-                        help: Name of measurement.
-            - search:
-                about: Search for a module
-                args:
-                    - MEASUREMENT_NAME:
-                        required: true
-                        help: Name of measurement.
     - operation:
         about: Performs actions on operations.
         subcommands:
             - add:
                 about: Add an operation.
                 args:
-                    - MEASUREMENT_NAME:
+                    - MEASUREMENT_CLASS:
                         required: true
-                        help: Name of measurement.
+                        help: Class of measurement.
                     - DOMAIN:
                         required: true
                         help: Domain name.
-                    - URL:
-                        required: true
-                        help: Url name.
                     - PARAMETER:
                         short: p
                         long: parameter
