--- a/bridge/Cargo.toml
+++ b/bridge/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.5"
 authors = ["Dan Rammer <hamersaw@bushpath.com>"]
 
 [dependencies]
-bson = "0.4"
+bson = "0.5"
 capnp = "0.8"
 capnp-rpc = "0.8"
 clap = {version = "2.19", features = ["yaml"]}
@@ -16,3 +16,4 @@ slog = "1.5"
 slog-scope = "0.2"
 slog-term = "1.5"
 tokio-core = "0.1"
+tokio-io = "0.1"
