--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ capnpc = "0.7"
 
 [dependencies]
 bson = "0.4"
+bytes = "0.4"
 clap = "2.19"
 curl = "0.4"
 futures = "0.1"
 mongodb = "0.2"
 serde = "0.9"
 serde_derive = "0.9"
+tokio-io = "0.1"
