--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,12 @@
 name = "proddle"
 version = "0.1.6"
 authors = ["Dan Rammer <hamersaw@bushpath.com>"]
-build = "build.rs"
 
 [build-dependencies]
 capnpc = "0.7"
 
 [dependencies]
+bincode = {git="https://github.com/TyOverby/bincode"}
 bson = "0.4"
 bytes = "0.4"
 clap = "2.19"
