--- a/bridge/Cargo.toml
+++ b/bridge/Cargo.toml
@@ -15,5 +15,6 @@ serde_json = "0.9"
 slog = "1.5"
 slog-scope = "0.2"
 slog-term = "1.5"
-tokio-core = "0.1"
 tokio-io = "0.1"
+tokio-proto = "0.1"
+tokio-service = "0.1"
