--- a/vantage/Cargo.toml
+++ b/vantage/Cargo.toml
@@ -5,8 +5,6 @@ authors = ["Dan Rammer <hamersaw@bushpath.com>"]
 
 [dependencies]
 bson = "0.4"
-capnp = "0.8"
-capnp-rpc = "0.8"
 chan = "0.1"
 clap = {version = "2.19", features = ["yaml"]}
 curl = "0.4"
@@ -19,3 +17,5 @@ slog-term = "1.5"
 time = "0.1"
 tokio-core = "0.1"
 tokio-io = "0.1"
+tokio-proto = "0.1"
+tokio-service = "0.1"
