--- a/bridge/Cargo.toml
+++ b/bridge/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Dan Rammer <hamersaw@bushpath.com>"]
 bson = "0.4"
 capnp = "0.8"
 capnp-rpc = "0.8"
+chan = "0.1"
 clap = {version = "2.19", features = ["yaml"]}
 futures = "0.1"
 mongodb = {version = "0.2", features = ["ssl"]}
